# SeamCarving2

./: CMakeLists.txt  Energie.cpp  Energie.h  Images_av.cpp  Images_av.h  Seam.cpp  Seam.h  graphics.cpp  graphics.h  graphicswindow.cpp  graphicswindow.h  main.cpp  seamcarving.cpp  seamcarving.h  utils.cpp  utils.h
